Project structure changes, copy subscriptions templates to project template folder

--- a/templates/subscriptions/base.html
+++ b/templates/subscriptions/base.html
@@ -14,7 +14,7 @@
   </head>
 
   <body>
-    {% include 'header.html' %}
+    {% include 'snippets/header.html' %}
         <div id="dfs-container">
             {% block content %}{% endblock %}
         </div>
