--- a/templates/base.html
+++ b/templates/base.html
@@ -8,8 +8,9 @@
   <div  class="container">
     <div  class="row justify-content-center">
       <div  class="col-4">
-          {% include 'header.html' %}
-          {% block main %} {% endblock %}
+          {% include 'snippets/header.html' %}
+          {% block main %}
+          {% endblock %}
       </div>
     </div>
   </div>
