--- a/templates/subscriptions/base.html
+++ b/templates/subscriptions/base.html
@@ -9,7 +9,8 @@
       <meta name="viewport" content="width=device-width, initial-scale=1">
       <link  rel="stylesheet"  href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"  integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"  crossorigin="anonymous">
       <link href="https://fonts.googleapis.com/css?family=Telex" rel="stylesheet">
-      <link rel="stylesheet" type="text/css" href="{% static 'subscriptions/styles.css' %}">
+      <link rel="stylesheet" type="text/css" href="{% static 'css/styles.css' %}">
+      <link rel="stylesheet" type="text/css" href="{% static '/css/style.css' %}">
       {% block subscriptions_styles %}{% endblock %}
   </head>
 
