--- a/users/templates/index.html
+++ b/users/templates/index.html
@@ -3,17 +3,13 @@
 <html  lang="en">
     <head>
         <link  rel="stylesheet"  href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"  integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"  crossorigin="anonymous">
-        <link rel="stylesheet" type="text/css" href="{% static '/css/style.css' %}">
+        <link rel="stylesheet" type="text/css" href="{% static 'users/style.css' %}">
         <title>CloudStorage</title>
     </head>
     <body>
-        {% include 'snippets/header.html' %}
-        <div  class="container">
+        <div class="container bg">
             <div  class="row justify-content-center">
                 <div  class="col-4">
-                    <h1>e=hrllo</h1>
-                    {% block main %}
-                    {% endblock %}
                 </div>
             </div>
         </div>
