Update login, signup, subscribe_list templates

--- a/templates/base.html
+++ b/templates/base.html
@@ -4,14 +4,14 @@
     <head>
         <link  rel="stylesheet"  href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"  integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"  crossorigin="anonymous">
         <link rel="stylesheet" type="text/css" href="{% static '/css/style.css' %}">
-        <title>CloudStorage</title>
+        <link rel="shortcut icon" href="{% static '/image/cloud.png' %}" type="image/x-icon">
+        <title>{% block title %}CloudStorage{% endblock %}</title>
     </head>
-    <body>
+    <body class="login-body">
         {% include 'snippets/header.html' %}
-        <div  class="container">
+        <div class="container container-login">
             <div  class="row justify-content-center">
                 <div  class="col-4">
-                    <h1>e=hrllo</h1>
                     {% block main %}
                     {% endblock %}
                 </div>
