--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,15 +1,21 @@
+html,
+body {
+    height: 100%;
+}
+
 .header {
     padding-left: 150px;
     padding-right: 150px;
     height: 80px;
-    background-color: #f7fbff;
+    background-color: #ffffff;
+    box-shadow: 0 1px 0 0 rgba(194,194,194,0.24)
 }
 
 .header .header__title {
     margin-right: 30px; 
     padding-top: 0;
     padding-right: 30px;
-    background-image: url(../../templates/snippets/cloud.png);
+    background-image: url(../../static/image/cloud.png);
     background-repeat: no-repeat;
     background-position: right;
     font-size: 22px;
@@ -52,6 +58,7 @@
     margin-right: 30px;
 }
 
+
 @media screen and (max-width: 1070px)
 {
     .header
@@ -62,3 +69,80 @@
 }
 
 /* Plan cards styles */
+#dfs-container
+{
+    min-height: initial;
+    position: absolute;
+    height: 100%;
+    padding-top: 60px;
+    background-color: #f5f5f5;
+}
+
+#dfs-container .subscribe-container .plans
+{
+    margin-top: 30px;
+    padding-top: 0;
+}
+
+#dfs-container .subscribe-container .plan
+{
+    min-height: 540px;
+    margin-left: 15px;
+    margin-right: 15px;
+    border: none;
+    background-color: #ffffff;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    padding: 30px;
+}
+
+#dfs-container .button-positive {
+    background-color: #2789d5;
+    color: #ffffff;
+    padding-top: 5px;
+    padding-bottom: 5px;
+    box-sizing: border-box;
+    padding: 10px;
+    font-size: 20px;
+    min-width: 150px;
+}
+
+#dfs-container .button-positive:hover {
+    border-color: #237bbf;
+    background-color: #237bbf;
+    color: #ffffff;
+}
+
+.plan__description {
+    font-size: 20px;
+}
+
+@media screen and (max-width: 1025px)
+{
+    #dfs-container .subscribe-container .plans
+    {
+        align-items: center;
+    }
+}
+
+/* Login */
+
+.login-body {
+    background-color: #f7f7f5;
+}
+
+.login-card {
+    margin-top: 150px;
+}
+
+/*Sign up*/
+.signup-card {
+    margin: 20px 0;
+    padding: 15px;
+    background-color: #ffffff;
+    border-radius: 5px;
+}
+
+.signup-card .signup-card__title {
+    font-size: 24px;
+    text-align: center;
+}
