--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -111,7 +111,7 @@ html, body {
       width: 100%;
       font-size: 50px;
       font-weight: 600;
-      color: black;
+      color: #000000;
       letter-spacing: -1.3px;
     }
 
