--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -2,8 +2,10 @@
 {% load crispy_forms_filters %}
 {% load crispy_forms_tags %}
 
+{% block title %}Login - CloudStorage{% endblock %}
+
 {% block main %}
-<div class="card">
+<div class="card login-card">
     <div class="card-body">
         <h4 class="card-title">Log in to your account</h4>
 
