--- a/templates/snippets/header.html
+++ b/templates/snippets/header.html
@@ -27,8 +27,8 @@
           </div>
       </li>
     </ul>
-    <button class="btn btn-link header__button-login" type="button">Log In</button>
-    <button class="btn btn-primary header__button-signup" type="button">Get Started</button>
+      <a class="btn btn-link header__button-login" href="/users/login">Log In</a>
+      <a class="btn btn-primary header__button-signup" href="/users/signup"><span>Get Started</span></a>
 
   </div>
 </nav>
