--- a/templates/base.html
+++ b/templates/base.html
@@ -17,5 +17,8 @@
                 </div>
             </div>
         </div>
+        <script src="{% static 'js/jquery-3.5.1.min.js' %}"></script>
+        {% block javascript %}
+        {% endblock %}
     </body>
 </html>
