--- a/templates/storage/upload.html
+++ b/templates/storage/upload.html
@@ -25,7 +25,8 @@
                     <th scope="col">Preview</th>
                     <th scope="col">File</th>
                     <th scope="col">Uploaded at</th>
-                    <th scope="col">Action</th>>
+                    <th scope="col">Size</th>
+                    <th scope="col">Action</th>
                 </tr>
             </thead>
             <tbody>
@@ -34,6 +35,7 @@
                     <td><img width="100px" height="100px" src="../..{{ file.file.url }}" /></td>
                     <td><a href="{{ file.file.url }}">{{ file.title }} {{ file.file.content_type }}</a></td>
                     <td><span>{{ file.uploaded_at }}</span></td>
+                    <td><span>{{ file.size }}</span></td>
                     <td>
                         <div>
                             <form action="{% url 'remove-file' %}" method="POST">
