--- a/templates/subscriptions/subscribe_list.html
+++ b/templates/subscriptions/subscribe_list.html
@@ -7,6 +7,7 @@
 
 {% block content %}
   <main class="subscribe-container">
+    <h1>Sign Up</h1>
     <h1>{{ plan_list.title|safe }}</h1>
 {#    <span class="subtitle">{{ plan_list.subtitle|safe }}</span>#}
 {##}
