Limit storage size by subscription plan

--- a/templates/registration/signup-basic.html
+++ b/templates/registration/signup-basic.html
@@ -14,7 +14,7 @@
             <input type="hidden" name="plan_id" value="439f2a75-5d03-4e8b-89a2-c7e705d185f6">
             <input type="hidden" name="plan_name" value="Basic">
             <input type="hidden" name="redirect_from" value="signup">
-            <button type="submit" class="button-positive">{{ "Sign Up"|safe }}</button>
+            <button type="submit" class="btn btn-primary">{{ "Sign Up"|safe }}</button>
         </div>
     </form>
 {% endblock %}
