--- a/templates/registration/signup-premium.html
+++ b/templates/registration/signup-premium.html
@@ -14,7 +14,7 @@
             <input type="hidden" name="plan_id" value="7f53974e-32da-4a1d-aacb-1d7ca0f1d6a8">
             <input type="hidden" name="plan_name" value="Premium">
             <input type="hidden" name="redirect_from" value="signup">
-            <button type="submit" class="button-positive">{{ "Sign Up"|safe }}</button>
+            <button type="submit" class="btn btn-primary">{{ "Sign Up"|safe }}</button>
         </div>
     </form>
 {% endblock %}
