--- a/templates/registration/signup-standard.html
+++ b/templates/registration/signup-standard.html
@@ -14,7 +14,7 @@
             <input type="hidden" name="plan_id" value="c5f70d97-08ae-46e8-a75a-782fa8a706e3">
             <input type="hidden" name="plan_name" value="Standard">
             <input type="hidden" name="redirect_from" value="signup">
-            <button type="submit" class="button-positive">{{ "Sign Up"|safe }}</button>
+            <button type="submit" class="btn btn-primary">{{ "Sign Up"|safe }}</button>
         </div>
     </form>
 {% endblock %}
