--- a/templates/base.html
+++ b/templates/base.html
@@ -2,9 +2,11 @@
 <!DOCTYPE html>
 <html  lang="en">
     <head>
-        <link  rel="stylesheet"  href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"  integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"  crossorigin="anonymous">
+        <link rel="stylesheet" type="text/css" href="{% static '/css/bootstrap/bootstrap.min.css' %}">
         <link rel="stylesheet" type="text/css" href="{% static '/css/style.css' %}">
+
         <link rel="shortcut icon" href="{% static '/image/cloud.png' %}" type="image/x-icon">
+
         <title>{% block title %}CloudStorage{% endblock %}</title>
     </head>
     <body class="login-body">
@@ -17,7 +19,6 @@
                 </div>
             </div>
         </div>
-        <script src="{% static 'js/jquery-3.5.1.min.js' %}"></script>
         {% block javascript %}
         {% endblock %}
     </body>
