--- a/templates/snippets/header.html
+++ b/templates/snippets/header.html
@@ -1,4 +1,5 @@
 {% load static %}
+
 <nav class="navbar navbar-expand-lg navbar-light header">
   <a class="navbar-brand header__title"
      href={% if not user.is_authenticated %}"/subscriptions/subscribe"
@@ -46,9 +47,9 @@
                 <a class="btn btn-link header__button-login" href="/users/profile">{{user.username}}</a>
                 <a class="btn btn-link header__button-login" href="/users/logout">Logout</a>
         {% endif %}
-
     </div>
 </nav>
-<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+
+<script src="{% static 'js/jquery/jquery-3.5.1.min.js' %}"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+<script src="{% static 'js/bootstrap/bootstrap.min.js' %}"></script>
