--- a/templates/subscriptions/base.html
+++ b/templates/subscriptions/base.html
@@ -7,11 +7,16 @@
   <head>
       <title>{% block title %}Subsscriptions{% endblock %}</title>
       <meta name="viewport" content="width=device-width, initial-scale=1">
-      <link  rel="stylesheet"  href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"  integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"  crossorigin="anonymous">
+
       <link href="https://fonts.googleapis.com/css?family=Telex" rel="stylesheet">
-      <link rel="stylesheet" type="text/css" href="{% static '/css/styles.css' %}">
+
+
+      <link rel="stylesheet" type="text/css" href="{% static '/css/bootstrap/bootstrap.min.css' %}">
+      <link rel="stylesheet" type="text/css" href="{% static '/css/subscriptions-style.css' %}">
       <link rel="stylesheet" type="text/css" href="{% static '/css/style.css' %}">
+
       <link rel="shortcut icon" href="{% static '/image/cloud.png' %}" type="image/x-icon">
+
       {% block subscriptions_styles %}{% endblock %}
   </head>
 
