Update subscribe design

--- a/templates/base.html
+++ b/templates/base.html
@@ -10,7 +10,7 @@
 
         <title>{% block title %}CloudStorage{% endblock %}</title>
     </head>
-    <body class="login-body">
+    <body class="base-body">
         {% include 'snippets/header.html' %}
         <div class="container container-login">
             <div  class="row justify-content-center">
