--- a/static/css/style.css
+++ b/static/css/style.css
@@ -78,9 +78,7 @@ body {
 /* Plan cards styles */
 #dfs-container
 {
-    min-height: initial;
-    position: absolute;
-    height: 100%;
+    font: inherit;
     padding-top: 60px;
     background-color: #f5f5f5;
 }
@@ -93,6 +91,7 @@ body {
 
 #dfs-container .subscribe-container .plan
 {
+    min-width: 320px;
     min-height: 540px;
     margin-left: 15px;
     margin-right: 15px;
@@ -123,6 +122,15 @@ body {
     font-size: 20px;
 }
 
+.signup-button {
+    margin-top: 15px;
+    width: 100%;
+}
+
+.card-signup-button {
+    width: 225px;
+}
+
 @media screen and (max-width: 1025px)
 {
     #dfs-container .subscribe-container .plans
@@ -131,19 +139,26 @@ body {
     }
 }
 
+.plan-icon {
+    width: 150px;
+    height: 150px;
+    object-fit: cover;
+    border-radius: 50%;
+}
+
 /* Login */
 
-.login-body {
+.base-body, .dfs-container {
     background-color: #f7f7f5;
 }
 
 .login-card {
-    margin-top: 150px;
+    margin: 150px auto 0 auto;
 }
 
 /* Sign up */
 .signup-card {
-    margin: 20px 0;
+    margin: 20px auto;
     padding: 15px;
     background-color: #ffffff;
     border-radius: 5px;
@@ -233,4 +248,56 @@ body {
     width: 100%;
     height: 100%;
     object-fit: cover;
+}
+
+.action-icon {
+    font-size: 1.1rem;
+}
+
+.action-icon:last-child {
+    margin-left: 10%;
+}
+
+.profile-wrapper {
+    margin-top: 5rem;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+}
+
+.profile-image-column {
+    height: 100%;
+    /*display: inline-flex;*/
+}
+
+.profile-image {
+    margin: -10% 0 0 3%;
+}
+
+.profile-info-column {
+    display: flex;
+    flex-direction: column;
+    margin-left: 15%;
+}
+
+.profile-info-column-item {
+    margin-top: 5%;
+    align-self: flex-start;
+}
+
+.profile-info-column-item:last-child {
+    margin: 15% 0 0 5%;
+}
+
+.profile-info {
+    display: inline-block;
+}
+
+.btn-save-changes {
+    width: 155px;
+}
+
+.btn-save-changes:after {
+    font-family: "Font Awesome 5 Free"; font-weight: 900; content: "\f058";
+    margin-left: 9%;
 }
