--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -5,7 +5,7 @@
 {% block title %}Login - CloudStorage{% endblock %}
 
 {% block main %}
-<div class="card login-card">
+<div class="card login-card col-6">
     <div class="card-body">
         <h4 class="card-title">Log in to your account</h4>
 
