--- a/templates/snippets/header.html
+++ b/templates/snippets/header.html
@@ -24,20 +24,20 @@
                 </li>
             {% else  %}
                 <li class="nav-item">
-                    <a class="nav-link" href="{% url 'upload' %}">My Files</a>
+                    <a class="nav-link" href="{% url 'upload' %}">Files</a>
                 </li>
             {% endif %}
-            <li class="nav-item dropdown header__dropdown">
-                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                    Dropdown
-                </a>
-                <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                    <a class="dropdown-item" href="#">Action</a>
-                    <a class="dropdown-item" href="#">Another action</a>
-                    <div class="dropdown-divider"></div>
-                    <a class="dropdown-item" href="#">Something else here</a>
-                </div>
-            </li>
+{#            <li class="nav-item dropdown header__dropdown">#}
+{#                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">#}
+{#                    Dropdown#}
+{#                </a>#}
+{#                <div class="dropdown-menu" aria-labelledby="navbarDropdown">#}
+{#                    <a class="dropdown-item" href="#">Action</a>#}
+{#                    <a class="dropdown-item" href="#">Another action</a>#}
+{#                    <div class="dropdown-divider"></div>#}
+{#                    <a class="dropdown-item" href="#">Something else here</a>#}
+{#                </div>#}
+{#            </li>#}
         </ul>
 
         {% if not user.is_authenticated %}
